# my-c-lib

./: .gitignore  CMakeLists.txt  COPYING  shapes.cpp  shapes.h  shapes_lib1.cpp
cmake/: config.cmake.in
